--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </main>
 
-    <div class="attribution">
+    <div class="attribution" role="contentinfo">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
